# BlazeLog_Lib

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: FileWriter.h  Logger.h  ThreadSafeQueue.h
src/: FileWriter.cpp  Logger.cpp
